--- a/admin/index.html
+++ b/admin/index.html
@@ -4,66 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Login | Royal Fragrance</title>
+    <title>Royal Admin</title>
     <link rel="stylesheet" href="css/admin.css">
-    <style>
-        body {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            background: #000;
-        }
-
-        .login-box {
-            background: #111;
-            padding: 40px;
-            border: 1px solid #333;
-            width: 100%;
-            max-width: 400px;
-            text-align: center;
-        }
-
-        .login-box h1 {
-            color: var(--color-gold);
-            margin-bottom: 30px;
-        }
-
-        .form-control {
-            width: 100%;
-            padding: 12px;
-            background: #222;
-            border: 1px solid #333;
-            color: white;
-            margin-bottom: 20px;
-        }
-    </style>
 </head>
 
 <body>
-
     <div class="login-container">
         <div class="login-box fade-in">
             <h1>Royal Admin</h1>
-            <p>Enter your credentials to access dashboard</p>
-            <form onsubmit="event.preventDefault(); AdminManager.login(this.username.value, this.password.value)">
-                <div class="form-group">
-                    <label class="form-label">Username</label>
-                    <input type="text" name="username" class="form-control" required>
-                </div>
-                <div class="form-group">
-                    <label class="form-label">Password</label>
-                    <input type="password" name="password" class="form-control" required>
-                </div>
-                <button class="btn-login">Login to Dashboard</button>
-            </form>
-            <p style="margin-top: 20px; font-size: 0.8rem; opacity: 0.5;">Authorized Access Only</p>
+            <p>Security Disabled. Access Dashboard Directly.</p>
+            <a href="dashboard.html" class="btn-login"
+                style="display:block; text-decoration:none; text-align:center; padding-top:15px;">Enter Dashboard</a>
         </div>
     </div>
-
-    <!-- Need data.js for localStorage check if we want, but actually only admin.js needed here -->
-    <script src="../js/data.js"></script>
-    <script src="js/admin.js"></script>
+    <script>
+        // Auto redirect for convenience
+        setTimeout(() => {
+            window.location.href = 'dashboard.html';
+        }, 1000);
+    </script>
 </body>
 
 </html>
