--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
         style="position: fixed; top: 0; width: 100%; background: rgba(5, 26, 16, 0.95); padding: 10px 0; z-index: 1000; border-bottom: 1px solid #0f402c;">
         <div class="container nav-container"
             style="display: flex; justify-content: space-between; align-items: center;">
-            <a href="index.html" class="logo">
-                <img src="assets/logo.png" alt="Abu Asim" class="logo-img">
+            <a href="index.html" class="logo-container">
+                <img src="assets/logo_v2.png" alt="Royal Fragrance" class="logo-img">
+                <span class="brand-text">ROYAL FRAGRANCE</span>
             </a>
             <ul class="nav-links" style="display: flex; gap: 30px;">
                 <li><a href="index.html" class="active">Home</a></li>
